2004-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-url.el (mm-url-predefined-programs): Add --silent arg to curl.

	* gnus-group.el (gnus-group-expire-articles-1): Decode group name.
	(gnus-group-set-current-level): Decode group name.

2004-12-15  Maciek Pasternacki  <maciekp@japhy.fnord.org>  (tiny change)

	* nnrss.el (nnrss-fetch): Signal an error if w3-parse-buffer also
	failed.

2004-12-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-delete-group): Decode group name.
	(gnus-group-make-rss-group): Encode group name.
	(gnus-group-catchup-current): Decode group name.
	(gnus-group-kill-group): Decode group name.

2004-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-narrow-to-page): Don't hardcode point-min.

2004-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-make-rss-group): Use
	gnus-group-make-group instead of gnus-group-unsubscribe-group.

	* gnus-start.el (gnus-setup-news): Honor user's setting to
	gnus-message-archive-method.  Suggested by Lute Kamstra
	<Lute.Kamstra@xs4all.nl>.

2004-12-10  Arnaud Giersch  <arnaud.giersch@free.fr>  (tiny change)

	* gnus-sum.el (gnus-summary-exit-no-update): Don't clear the
	global counterparts of the buffer-local variables.

2004-11-16  Romain Francoise  <romain@orebokech.com>

	* gnus-sum.el (gnus-summary-exit): Don't clear the global
	counterparts of the buffer-local variables.

2004-11-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-forbidden-properties): Fixed typo in doc
	string.

2004-11-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-util.el (gnus-replace-in-string): Added doc string.

	* nnmail.el (nnmail-split-header-length-limit): Increase to 2048
	to avoid problems when splitting mails with many recipients.

2004-11-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-sum.el (gnus-summary-exit): Remove redundant and harmful
	pop-to-buffer, covered by the subsequent gnus-configure-windows.
