@@ -1,3 +1,7 @@
+2004-12-16  Simon Josefsson  <jas@extundo.com>
+
+	* hashcash.el (hashcash-payment-alist): Fix custom :type.
+
 2004-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mm-url.el (mm-url-predefined-programs): Add --silent arg to curl.
